--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     height: 1366px;
     grid-template-columns: 100%;
     grid-template-rows: 30fr 60fr 10fr;
-    gap: 9px;
+    gap: 0;
     grid-template-areas: 
     "header" 
     "main"
@@ -21,7 +21,6 @@
         grid-area: header;
         background: url(imgs/imagens/london.jpg);
         /* align-items: center; */
-        background: url(imgs/imagens/london.jpg);
         height: 800px;
         object-fit: cover;
         background-repeat: no-repeat;
@@ -32,6 +31,8 @@
         justify-content: center;
 
     }
+
+ 
     .bk{
         background-color: white;
         width: 100% ;
@@ -89,18 +90,16 @@
     }
     
     .in{
-        height: 35%;
-        display: flex;
+        height: 50%;
+        display: block;
         padding: 2.5%;
         gap: 5%;
         align-items: center;
-            /* background-color: aquamarine; */
-    
     
     }
     .todo{
         background-color:#f1f1f1;
-        height: 80%;
+        height: 300px;
         padding: 10px;
         align-items: center;
     }
@@ -108,6 +107,21 @@
         height: 30%;
         padding: 20px;
     }
+
+    .btn_submit{
+        height: 100%;
+        color: white;
+        background-color:#606060 ;
+        
+
+    } 
+
+    .t_txt{
+        width: 100%;
+        height: 40px;
+    }
+    
+
 
     @media (max-width: 768px){
         .bk{
@@ -122,12 +136,70 @@
             width: 500px;
             margin-left: 110px;
         }
-        .header{
+        header{
             align-items: center;
         }
     
     }
+    @media (max-width: 450px){
+        
+        header{
+            grid-area: header;
+            background: none;
+            object-fit: cover;
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            position: relative;
+            align-items: center;
+            justify-content: center;
+            justify-items: center;
+        }
+        .bk{
+            display: flex;
+            justify-content: space-around;
+        }
+        .box{
+            display: inline;
+            align-items: center;
+            justify-items: center;
+            justify-content: center;
+         
+        }
+        header{
+            align-items: center;
+        }
+        .todo{
+            background-color:white;
+           height: 74%;
+            align-items: center;
+        }
+        .btn{
+            height: 10%;
+            margin-top: -20px;
+            display: flex;
+            align-items: center;
+        }
+    
+        .btn_submit{
+            height: 200%;
+            color: white;
+            background-color:#606060 ;
 
+        } 
+    .in{
+        display: block;
+        align-items: center;
+    }
+    
+        .t_txt{
+            width: 100%;
+            height: 40px;
+        }
+        
+    }
+
+
+    
     main{
         grid-area: main;
         height: 2000px;
@@ -148,7 +220,6 @@
        "sec4" 
 
     }
-
   
 
     .sec1{
@@ -168,6 +239,7 @@
         .sec1{
         width: 100%;        
         }
+        
     }
 
     .box_img{
@@ -180,7 +252,7 @@
         "grande grande um dois" 
         "grande grande tres quatro"
     }
-
+   
     .sec_title{
        background-color: white;
         margin-top: 10px;
@@ -252,6 +324,39 @@
 
     }
 
+    @media(max-width: 450px){
+        .sec1{
+            /* background-color: aqua; */
+            /* background-color: #f38981; */
+            grid-area: sec1;
+            width: 95%;        
+            height: 100%;
+            display: grid;
+            grid-template-rows: 1.5fr 8.5fr;
+            grid-template-areas:
+            "sec_title"
+            "box_img" 
+            ;
+        }
+        .box_img{
+            /* align-items: center; */
+            /* justify-items: center; */
+            justify-content: center;
+            height: 800px;
+            grid-area: box_img;
+            display: grid;
+            grid-template-columns: 1fr ;
+            grid-template-rows: 2fr 2fr 2fr 2fr 2fr  ;
+            gap: 5px;
+            grid-template-areas: 
+            "grande"
+            "um"
+            "dois"
+            "tres"
+            "quatro"
+        }
+    }
+
     .sec2{
         grid-area: sec2;
         /* background-color: blueviolet; */
@@ -275,8 +380,10 @@
     @media(max-width: 768px){
         .sec2{
         width: 100%;        
+        
         }
     }
+
 
     .sec_title2{
         grid-area: sec_title2;
@@ -305,6 +412,12 @@
         "desc_img desc_img2"
         ;
     }
+
+ 
+    
+  
+
+
     .img2{
         grid-area: img2;
         background-color: black;
@@ -326,6 +439,9 @@
         margin-top: -38px;
        
     }
+
+
+
     .img3{
         grid-area: img3;
         background-color: black;
@@ -360,6 +476,7 @@
         }
     }
 
+ 
     .title_box{
         background-color: #606060;
         display: flex;
@@ -412,6 +529,62 @@
         cursor: pointer;
     }
 
+    
+    @media(max-width: 450px){
+        .sec2{
+            /* background-color: aquamarine; */
+            grid-area: sec2;
+            width: 95%;        
+            height: 50%;
+            margin-top: -300px;
+            display: grid;
+            align-items: first baseline;
+            /* justify-items: center; */
+            /* grid-template-columns: 10fr; */
+            grid-template-rows: 1fr 9fr;
+            grid-template-areas:
+            "sec_title2"
+            "box_nature";       
+        }
+        .sec_title2{
+            /* margin-top: 150px; */
+            grid-area: sec_title2;
+            /* background-color: green; */
+            color: black;
+            text-align:left;
+            align-items: center;
+            justify-items: center;
+        }
+
+        main{
+            height: 3000px;
+          
+        }
+        
+        .box_nature{
+            /* background-color: brown; */
+            grid-area: box_nature;
+            /* background-color: blue; */
+            /* margin-top: 0px; */
+            height: 700px;
+            width: 100%;
+            display: grid;
+            align-items: center;
+            justify-content: center;
+            justify-items: center;
+            grid-template-columns: 10fr;
+            grid-template-rows: 2.5fr 2.5fr 2.5fr 2.5fr ;
+            grid-template-areas: 
+            "img2"
+            "desc_img"
+            "img3"
+            "desc_img2"
+                ;
+        }
+    
+    
+    }
+
     .sec4{
         grid-area: sec4;
         background-color: #f1f1f1;
@@ -425,6 +598,7 @@
         width: 100%;        
         }
     }
+
 
     .sec_title{
         background-color: #f1f1f1;
@@ -485,6 +659,13 @@
         color: white;
         cursor: pointer;
     }
+
+    @media(max-width: 450px){
+        .sec4{
+        width: 100%;        
+        }
+    }
+
 
     footer{
         margin-top: -15px;
